--- a/E02_OOP_Collections_Car/E02_OOP_Collections_Car.csproj
+++ b/E02_OOP_Collections_Car/E02_OOP_Collections_Car.csproj
@@ -44,15 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Car.cs" />
+    <Compile Include="Interfaces\ICar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\D00_Utility\D00_Utility.csproj">
       <Project>{ff06bc2d-352b-40c9-a4ca-fe3ee76351d8}</Project>
